<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general -->
    <string name="app_name">Loan Calculator</string>
    <string name="settings">Settings</string>
    <string name="settings_advanced">Advanced settings</string>
    <string name="help">Help</string>
    <string name="loading">Loading …</string>
    <!-- loan amount -->
    <string name="loan_amount">Loan amount</string>
    <string name="loan_amount_default">100000</string>
    <string name="loan_amount_help">This is the received amount of money from the lender, also called principal.</string>
    <string name="invalidInputAmountLoan">Enter a valid loan amount, for instance 1000</string>
    <!-- runtime -->
    <string name="runtime">Runtime</string>
    <string name="runtime_default">5</string>
    <string name="runtime_help">This is the number of years in which the loan has to be paid back. If a different repayment period is chosen, then the years will be split up into shorter periods.</string>
    <string name="invalidInputLife">Enter a valid lifetime of the loan, for instance 5</string>
    <string name="calculate">Show plan</string>
    <!-- interest -->
    <string name="interest">Interest</string>
    <string name="interest_rate">Interest rate</string>
    <string name="interest_rate_help">This is the interest rate per year that has to be paid. If a different repayment period is chosen, then the partial interest rate is charged in the shorter periods during the year.</string>
    <string name="interest_rate_default">5% p.a.</string>
    <!-- loan processing fee -->
    <string name="processing_fee">Loan processing fee</string>
    <string name="processing_fee_default">0.0%</string>
    <string name="processing_fee_help">Percentual amount of the loan, paid immediately after the loan is granted. In the calculation the loan amount is simply increased by this value, so that the actual money received is the same as in the input field.</string>
    <!-- activity charge -->
    <string name="activity_charge">Activity charge</string>
    <string name="activity_charge_help">Activity charge is paid per year. Activity charge is as usual not included in the effective rate calculation.</string>
    <string name="activity_charge_default">0</string>
    <!-- misc -->
    <string name="amortisationSchedule">Amortization schedule</string>
    <string name="send_via_email">Send via email</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="period">Period</string>
    <string name="repayment">Repayment</string>
    <string name="payment">Payment</string>
    <string name="payment_help">This is the actual amount, that your bank account will be charged. The payment is the sum of interest, repayment (the amount which lowers your loan) and activity charge.</string>
    <string name="loan_left">Loan</string>
    <string name="misc">Misc</string>
    <string name="no_schedule">No schedule calculated yet.</string>
    <string name="repayment_period">Repayment period</string>
    <string name="repayment_period_annual">Annual</string>
    <string name="repayment_period_quarterly">Quarterly</string>
    <string name="repayment_period_monthly">Monthly</string>
    <string name="repayment_mode">Repayment mode</string>
    <string name="repayment_mode_annuity">Annuity</string>
    <string name="repayment_mode_bullet">Bullet (not implemented)</string>
    <string name="repayment_mode_schedule">Schedule (not implemented)</string>

</resources>