<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TableRow>

            <TextView
                android:id="@+id/textActivityCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/info"
                android:text="@string/activity_charge" />

            <EditText
                android:id="@+id/editActivityCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:inputType="number"
                android:text="@string/activity_charge_default" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textProcessingFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/info"
                android:text="@string/processing_fee" />

            <TextView
                android:id="@+id/textProcessingFeeCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/processing_fee_default"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <SeekBar
                android:id="@+id/seekProcessingFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:max="30"
                android:progress="0" />
        </TableRow>
    </TableLayout>

</ScrollView>