<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_via_email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_to_clipboard" />
    </LinearLayout> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@drawable/schedule_header_border"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/period"
            android:textColor="#ffffff" >
        </TextView>

        <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/schedule_header_border"
            android:padding="5dp"
            android:text="@string/repayment"
            android:textColor="#ffffff" 
            android:gravity="center" >
        </TextView> -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/schedule_header_border"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/interest"
            android:textColor="#ffffff" >
        </TextView>

        <TextView
            android:id="@+id/text_header_payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/schedule_header_border"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/payment"
            android:drawableRight="@drawable/info"
            android:textColor="#ffffff" >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/schedule_header_border"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/loan_left"
            android:textColor="#ffffff" >
        </TextView>

        <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/schedule_header_border"
            android:padding="5dp"
            android:text="@string/misc"
            android:textColor="#ffffff" 
            android:gravity="center" >
        </TextView> -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_no_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/no_schedule"
            android:textColor="#000000" >
        </TextView>
    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollingCache="false" />

</LinearLayout>